# Cronly

./: .env.prod  .gitignore  Procfile  README.md  manage.py  pyproject.toml
Cronly/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: forms.py  models.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_date_added_cronjob_created_at.py  0003_cronjob_interval_seconds.py  0004_alter_cronjob_interval_seconds.py  0005_cronjob_user.py
cronly/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
cronly/migrations/: 0002_rename_date_added_cronjob_created_at.py  0003_cronjob_interval_seconds.py  0004_alter_cronjob_interval_seconds.py  0005_cronjob_user.py  0006_cronjob_last_pinged_at.py  0007_alter_cronjob_last_pinged_at_alter_cronjob_target.py  0008_remove_cronjob_avg_rtt_ms_and_more.py  0009_rename_cronjob_monitor.py
main/: celery.py  redis_client.py  settings.py  urls.py
monitors/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
monitors/migrations/: 0002_rename_date_added_cronjob_created_at.py  0003_cronjob_interval_seconds.py  0004_alter_cronjob_interval_seconds.py  0005_cronjob_user.py  0006_cronjob_last_pinged_at.py  0007_alter_cronjob_last_pinged_at_alter_cronjob_target.py  0008_remove_cronjob_avg_rtt_ms_and_more.py  0009_rename_cronjob_monitor.py
templates/: base.html
templates/cronly/: dashboard.html  new_cronjob.html  new_monitor.html
templates/monitors/: dashboard.html  new_monitor.html
templates/users/: account.html  login.html  register.html
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_discord_webhook_url.py
(+11 files in other folders)
