[project]
name = "cronly"
version = "0.1.0"
description = "A high-performance uptime monitoring tool."
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "crispy-bootstrap5>=2026.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-celery-beat>=2.9.0",
    "django-crispy-forms>=2.6",
    "gunicorn>=26.0.0",
    "honcho>=2.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pythonping>=1.1.4",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "whitenoise[brotli]>=6.12.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pydotplus>=2.0.2",
]
